# placement-compass

./: .dockerignore  .env  .gitignore  Dockerfile  Jenkinsfile  backfill-data.cjs  backfill-logos.js  check-logos.js  check-missing-data.cjs  check-tables.js  check-tables2.js  check-tables3.js  debug-logos.cjs  docker-compose.yml  dump-data.cjs  enrich-database.cjs  find-missing-logos.js  inspect-schema.js  list-tables.cjs
langgraph_app/: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
langgraph_app/agents/: __init__.py
langgraph_app/app/: main.py
langgraph_app/backend/: __init__.py  errors.py  main.py  models.py  persistence.py  schemas.py  service.py
langgraph_app/config/: __init__.py  settings.py
langgraph_app/consolidation/: __init__.py  base.py  consolidation_agent.py
langgraph_app/core/: __init__.py  models.py  services.py
langgraph_app/docs/: architecture.md
langgraph_app/graph_state/: __init__.py  state.py
langgraph_app/outputs/: apple.json  google.json
langgraph_app/persistence/: __init__.py  repository.py  supabase_client.py  supabase_repository.py
langgraph_app/pipelines/: orchestrator.py  retry.py
langgraph_app/prompts/: templates.py
langgraph_app/retry/: __init__.py  loop.py  retry_handler.py
langgraph_app/schema/: company_intelligence.sql
langgraph_app/tests/: __init__.py  test_backend_api.py  test_env.py  test_placeholders.py  test_settings.py
langgraph_app/utils/: __init__.py  async_helpers.py  logging.py  ollama_validation.py  serializer.py
langgraph_app/validation/: __init__.py  deterministic.py  (+3 more)
(+65 files in other folders)
