[project]
name = "langgraph-company-intelligence"
version = "0.1.0"
description = "Starter scaffold for a production-grade LangGraph Company Intelligence Platform."
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
homepage = "https://example.com"
repository = "https://example.com/repo"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
